compiler/testData/diagnostics/tests/contextParameters/contextParameterOnPackageScript.kts
// FIR_IDENTICAL
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ContextParameters
<!UNSUPPORTED!>context(_: Any?)<!> package pkg

/* GENERATED_FIR_TAGS: localProperty, propertyDeclaration */
